<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/layoutMain"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Title_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="Conversiones rápido y fácil"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Description_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Convierte monedas al instante"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnStartConversion"
            android:text="@string/btn_start_conversion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:padding="12dp" />

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button_light"
            android:padding="12dp"
            android:text="@string/btnHistory"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnOpenCamera"
            android:text="@string/btn_open_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button_light"
            android:textColor="@color/black"
            android:padding="12dp" />

        <Button
            android:id="@+id/btnOpenGallery"
            android:text="@string/btn_open_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button_light"
            android:textColor="@color/black"
            android:padding="12dp" />

        <TextView
            android:id="@+id/Instruction_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="serif"
            android:text="¿Qué puedes hacer?"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/Option1_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="- Conversión entre múltiples monedas"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/Option2_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="- Tipos de cambio en tiempo real"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />


            <TextView
                android:id="@+id/Option5_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="- Consulta tus conversiones recientes"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>